# realtor-tracker

./: .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  go.mod  go.sum  skaffold.yaml
docker-images/: Dockerfile-go-dev
indexer/: BUILD.bazel  WORKSPACE  go.mod  go.sum  main.go  mls.go  mls_test.go
indexer/client/: BUILD.bazel  client.go
indexer/collector/: BUILD.bazel  interface.go  mls.go  mls_test.go
indexer/main/: BUILD.bazel  main.go
indexer/mls/: BUILD.bazel  mls.pb.go  mls.proto
indexer/server/: BUILD.bazel  server.go
indexer/storage/: BUILD.bazel  db.go  interface.go  memory.go  memory_test.go  sqlite.go  sqlite_test.go
listing/: main.go
listing/server/: server.go
web/: BUILD.bazel
web/client/: BUILD.bazel  client.go
web/server/: BUILD.bazel  server.go
webmvc/: config.go  go.mod  go.sum  main.go  server.go  server_test.go
webmvc/base/: controller.go  logger.go  router_test.go
webmvc/controllers/: hello.go  hello_test.go  index.go  index_test.go  listing.go  listing_test.go
webmvc/datasource/: mls.go  mls_test.go
webmvc/main/: config.go  main.go
webmvc/models/: listing.go  listing_test.go
webmvc/server/: server.go  server_test.go
