filegroup(
  name="package-srcs",
  srcs = glob(
    ["**"],
    exclude = [
      "bazel-*/**",
      ".git/**",
      "*.db",
      "*.gz",
    ],
  ),
  visibility = ["//visibility:private"],
)

filegroup(
  name = "all-srcs",
  srcs = [
    ":package-srcs",
    "//indexer:all-srcs",
  ],
  tags = ["automanaged"],
  visibility = ["//visibility:public"],
)
