load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/tony-yang/realtor-tracker/indexer
gazelle(
    name = "gazelle",
)

go_library(
    name = "go_default_library",
    srcs = ["mls.go"],
    importpath = "github.com/tony-yang/realtor-tracker/indexer",
    visibility = ["//visibility:public"],
    deps = [
        "//mls:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mls_test.go"],
    embed = [":go_default_library"],
)

filegroup(
  name="package-srcs",
  srcs = glob(
    ["**"],
    exclude = [
      "bazel-*/**",
      ".git/**",
      "*.db",
      "*.gz",
    ],
  ),
  visibility = ["//visibility:private"],
)

filegroup(
  name = "all-srcs",
  srcs = [
    ":package-srcs",
    "//indexer/mls:all-srcs"
  ],
  tags = ["automanaged"],
  visibility = ["//visibility:public"],
)
