load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["mls.go"],
    importpath = "github.com/tony-yang/realtor-tracker/indexer",
    visibility = ["//visibility:public"],
    deps = [
        "//indexer/mls:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mls_test.go"],
    embed = [":go_default_library"],
    deps = ["//indexer/mls:go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
            "*.db",
            "*.gz",
        ],
    ),
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//indexer/client:all-srcs",
        "//indexer/main:all-srcs",
        "//indexer/mls:all-srcs",
        "//indexer/server:all-srcs",
        "//indexer/storage:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
