load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/tony-yang/realtor-tracker/indexer",
    visibility = ["//visibility:public"],
    deps = [
        "//indexer/collector:go_default_library",
        "//indexer/storage:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
            "*.db",
            "*.gz",
        ],
    ),
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//indexer/client:all-srcs",
        "//indexer/collector:all-srcs",
        "//indexer/mls:all-srcs",
        "//indexer/server:all-srcs",
        "//indexer/storage:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "indexer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
