load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "interface.go",
        "mls.go",
    ],
    importpath = "github.com/tony-yang/realtor-tracker/indexer/collector",
    visibility = ["//visibility:public"],
    deps = [
        "//indexer/mls:go_default_library",
        "//indexer/storage:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mls_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//indexer/mls:go_default_library",
        "//indexer/storage:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
