load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "interface.go",
        "memory.go",
        "sqlite.go",
    ],
    importpath = "github.com/tony-yang/realtor-tracker/indexer/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//indexer/mls:go_default_library",
        "//vendor/github.com/mattn/go-sqlite3:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "memory_test.go",
        "sqlite_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//indexer/mls:go_default_library"],
)
